<resources>
    <string name="app_name">Blood_Bank_System</string>
    <string name="blood_donation_app">Blood Donation App</string>
    <string name="donate_blood_and_save_lives">Donate blood and save lives!</string>
    <string name="blood_group">Blood group</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="type">type</string>
    <string name="full_name">Full name</string>
    <string name="donors_email">Donors Email</string>
    <string name="home">Home</string>
    <string name="blood_groups">Blood Groups</string>
    <string name="a_positive">A Positive</string>
    <string name="a_negative">A Negative</string>
    <string name="b_positive">B Positive</string>
    <string name="b_negative">B Negative</string>
    <string name="ab_positive">AB Positive</string>
    <string name="ab_negative">AB Negative</string>
    <string name="o_positive">O Positive</string>
    <string name="o_negative">O Negative</string>
    <string name="actions">Actions</string>
    <string name="profile">Profile</string>
    <string name="notifications">Notifications</string>
    <string name="log_out">Log Out</string>
    <string name="communicate">Communicate</string>
    <string name="about">About</string>
    <string name="share">Share</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string-array name="bloodgroups">
        <item>Select your blood group</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>
</resources>